--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.0",
-        "composer-plugin-api": "^1.0 | ^2.0"
-    },
-    "require-dev": {
+        "composer-plugin-api": "^1.0 | ^2.0",
         "composer/composer": "^1.0 | ^2.0@dev"
     },
     "autoload": {
