--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=8.0",
         "eazysoft/eazy-composer": "dev-main",
-        "symfony/console": "5.3.x-dev"
+        "psr/log": "^1.0",
+        "symfony/console": "^5.0"
     },
     "autoload": {
         "psr-4": {
